--- a/FlightTracking/MainWindow.xaml
+++ b/FlightTracking/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="FlightTracking.MainWindow"
+﻿
+<Window x:Class="FlightTracking.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,12 +7,16 @@
         xmlns:local="clr-namespace:FlightTracking" xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="1400">
+    <!--<Window.DataContext>
+        <ctrls:FlightsViewModel/>
+    </Window.DataContext>-->
     <Window.Resources>
+        <local:SumFlightConverter x:Key="SumFlightConverter"/>
         <Style TargetType="m:Pushpin" x:Key="pushpinTemplate">
-            <Setter Property="Template" x:Name="pushpinTemplate">
+            <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate x:Name="pushpinControlTemplate">
-                        <!--<Image Source="Images\airplane.png"  />-->
+                        <Image Source="C:\Users\tirts\source\repos\FlightTrackingNew\Images\airplane.png"  />
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -20,11 +25,12 @@
     <Grid>
         <m:Map Mode="road" x:Name="myMap" CredentialsProvider="8mfO2tXQwC9SsietmmVx~-TfhtpOy_Lyw8MrRYCCvLw~Ahwe66m1agNiuAbUg_zSfS1zWotIynZKHpdkzZeHF3bb8HiLvgfNh9h7CnZiYhHd"          
                    Center="32.000454,34.870743" ZoomLevel="5.0" AnimationLevel="None" Margin="250,75,9.6,10.4">
-            <m:MapItemsControl x:Name="pushpins" ItemsSource="{Binding}" Margin="0,0,-0.4,0">
+            <m:MapItemsControl x:Name="pushpins" ItemsSource="{Binding allFlights}" Margin="0,0,-0.4,0">
                 <m:MapItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <m:Pushpin Location="{Binding Location}" MouseDoubleClick="Pushpin_MouseDoubleClick_1"/>
-                        <!--Style="{StaticResource pushpinTemplate}"-->
+                        <m:Pushpin x:Name="myPushpin" Location="{Binding Location}" Style="{StaticResource pushpinTemplate}">
+                        </m:Pushpin>
+                            <!--Style="{StaticResource pushpinTemplate}"-->
                     </DataTemplate>
                 </m:MapItemsControl.ItemTemplate>
             </m:MapItemsControl>
